# django-graphql-user

./: LICENSE  README.rst  setup.cfg
graphql_user/: admin.py  apps.py  models.py  schema.py  serializers.py  urls.py  utils.py
graphql_user/migrations/: 0001_initial.py
