[metadata]
name = graphql-user
version = 0.1.3
description = A Django app implemented user module with graphql.
long_description = file: README.rst
author = Sourabh
author_email = srb.sourabh.044@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.2
    graphene-django >=3.1.5
    django-graphql-jwt == 0.4.0
    django-filter >= 23.3
    djangorestframework >= 3.14.0
